# backend-repository-template-rust

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  SECURITY.md  build.rs  update-proto-contracts.sh
.github/w/: automatic-merge.yml  check-and-lint.yaml  test.yaml
.github/workflows/: add-label.yaml  audit.yaml  automatic-merge.yml  automerge.yaml  bloat.yml  build-and-test.yaml  build_and_test.yaml  check-and-lint.yaml  security_audit.yaml  security_audit.yml  test.yaml
app/: Cargo.toml
app/src/: main.rs
docs/: bench.md  docker.md  usefull_commands.md
entrypoint/: Cargo.toml
entrypoint/src/: main.rs
module1/: Cargo.toml
module1/src/: lib.rs
module2/: Cargo.toml
module2/src/: lib.rs
